--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>ZenAPI | API Reference</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://zenvia-static.s3.amazonaws.com/favicon.ico">
-  <meta http-equiv="refresh" content="0; URL='./v2'"/>
-</head>
-<body>
-  <p>
-    Redirecting to <a href="./v2">latest API version</a>
-</p>
-</body>
+  <head>
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-148364475-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
+
+    <title>ZenAPI | API Reference</title>
+    <!-- needed for adaptive design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="https://zenvia-static.s3.amazonaws.com/favicon.ico">
+
+    <!--
+    ReDoc uses font options from the parent element
+    So override default browser styles
+    -->
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      .menu-content img {
+        padding: 25px;
+      }
+    </style>
+    <script src="/reload/reload.js"></script>
+  </head>
+  <body>
+    <div id="redoc_container"></div>
+    <script src="https://cdn.jsdelivr.net/npm/redoc@2.0.0-rc.23/bundles/redoc.standalone.js"></script>
+    <script>
+      Redoc.init(
+        './openapi.json',
+        {"theme":{"colors":{"primary":{"main":"#32329f"}},"breakpoints":{"small":"600px","medium":"800px"}},"pathInMiddlePanel":false,"noAutoAuth":true,"jsonSampleExpandLevel":"all","expandResponses":"200"},
+        document.getElementById("redoc_container"),
+        function () {
+          var els = document.querySelectorAll('td');
+          for (el of els) {
+            el.click();
+          }
+        }
+      );
+    </script>
+  </body>
 </html>
